--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 id="password"
                                 required
                             />
-                            <div class="not-match">111</div>
+                            <div class="not-match"></div>
                         </div>
                         <div>
                             <label for="confirm-password"
